--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiogram==3.19.0
 python-dotenv==1.0.1
 aiohttp==3.9.3
-openai==1.14.0
+openai>=1.14.0
 SQLAlchemy==2.0.28
 alembic==1.13.1
 asyncpg==0.29.0
