--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ openai>=1.14.0
 SQLAlchemy==2.0.28
 alembic==1.13.1
 asyncpg==0.29.0
+psycopg2-binary==2.9.9
 redis==5.0.3
 pydantic>=2.4.1,<2.6
 python-jose==3.3.0
