--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-aiogram==3.19.0
-python-dotenv==1.0.1
-aiohttp==3.9.3
-openai>=1.14.0
-SQLAlchemy==2.0.28
+aiogram==3.7.0
+python-dotenv==1.0.0
+sqlalchemy==2.0.25
 alembic==1.13.1
-asyncpg==0.29.0
 psycopg2-binary==2.9.9
-redis==5.0.3
+redis==5.0.1
+aiohttp==3.9.1
+openai>=1.14.0
+asyncpg==0.29.0
 pydantic>=2.4.1,<2.6
 python-jose==3.3.0
 requests==2.31.0 
