--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = migrations
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/tarot_bot
+sqlalchemy.url = postgresql://postgres:postgres@db:5432/taro
 
 [loggers]
 keys = root,sqlalchemy,alembic
